# tictactoe_ros

./: CMakeLists.txt  mainpage.dox  package.xml
config/: tictactoe_settings.ini
include/tictactoe_ros/: ai.h  board.h  gamewidget.h  globals.h  main_window.hpp  qnode.hpp  ratio_layouted_frame.hpp
launch/: tictactoe.launch
resources/: images.qrc
src/: ai.cpp  board.cpp  gamewidget.cpp  main.cpp  main_window.cpp  qnode.cpp  ratio_layouted_frame.cpp
ui/: main_window.ui
